# bestofblocket

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README  README.md  __init__.py  anonser.json  bestofblocket.yaml  cloudbuild.yaml  entrypoint.sh  loopfiles.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tailwind.config.js
.github/: dependabot.yml  deploy.yml
.github/workflows/: build_and_publish.yml  deploy.yml  lint.yml  lint_and_check.yml  test.yml
.zed/: settings.json  tasks.json
app/bestofblocket/: README.md  pubspec.yaml
app/bestofblocket/android/app/: build.gradle
app/bestofblocket/android/app/src/debug/: AndroidManifest.xml
app/bestofblocket/android/app/src/main/: AndroidManifest.xml
app/bestofblocket/android/app/src/main/kotlin/com/example/bestofblocket/: MainActivity.kt
app/bestofblocket/ios/Runner/: Info.plist
app/bestofblocket/ios/Runner.xcodeproj/: project.pbxproj
app/bestofblocket/test/: widget_test.dart
bestofblocket/: __init__.py
bestofblocket/conf/: urls.py  wsgi.py
bestofblocket/conf/requirements/: base.txt
bestofblocket/conf/settings/: base.py  local.py  production.py
bestofblocket/core/: admin.py  api.py  forms.py  middleware.py  models.py  storage.py  tasks.py  tests.py  utils.py  views.py
bestofblocket/core/fixtures/: testdata.json
bestofblocket/core/migrations/: 0001_initial.py  0002_auto__add_field_ad_link.py  0002_auto__del_field_ad_title__del_field_ad_image__del_field_ad_slug__del_f.py  0003_auto__chg_field_ad_image.py  0003_auto__del_ad__add_annonser.py  0004_auto__del_annonser__add_ad.py  0005_auto__add_field_ad_title__add_field_ad_date__add_field_ad_tips_author.py  0006_auto__del_field_ad_tipsare__del_field_ad_datum__del_field_ad_rubrik.py  0007_auto__add_field_ad_slug.py  0008_auto__add_field_ad_image.py  0009_auto__add_field_ad_generation.py  0010_auto__add_link.py  0011_auto__del_field_ad_filnamn__del_field_ad_tips_author.py  0012_auto__add_field_ad_is_approved__add_field_ad_text__chg_field_ad_date.py
bestofblocket/static/css/: master.css  mobile.11.css  mobile.12.css  mobile.14.css  mobile.15.css  mobile.4.css  mobile.6.css  mobile.8.css  mobile.9.css  mobile.css  output.css  side-menu.css  style.10.css  style.12.css  style.13.css  style.2.css  style.3.css  style.4.css  style.5.css  style.6.css  style.7.css  style.8.css  style.9.css  style.css
bestofblocket/static/js/: stickyMojo.js  ui.js  ui12.js  ui2.js
bestofblocket/templates/: 404.html  ad.html  ads.txt  app_privacy_policy.html  base.html  index.html  mobile.html  robots.txt  search.html  submit.html  thanks.html
bestofblocket/templates/mobile/: ad.html  base.html  index.html
bestofblocket_frontend/: Cargo.toml  Dioxus.toml
bestofblocket_frontend/assets/: tailwind.css
bestofblocket_frontend/src/: components.rs  layout.rs  main.rs  models.rs  views.rs
infra/: certificate.yaml  deployment.yaml  healthcheck.yaml  routes.yaml
kubernetes/: bestofblocket-httpd.yaml
