[project]
name = "bestofblocket"
version = "0.1.0"
description = "Source code for Best of Blocket website."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3==1.40.64",
    "django==5.2.7",
    "django-anymail==13.1",
    "django-ninja>=1.4.5",
    "django-storages==1.14.6",
    "gunicorn==23.0.0",
    "pillow==12.0.0",
    "psycopg==3.2.12",
    "psycopg-binary==3.2.12",
    "psycopg-pool==3.2.7",
    "whitenoise==6.11.0",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "bestofblocket"
module-root = ""

[tool.ruff.lint.per-file-ignores]
"bestofblocket/conf/settings/*" = ["F403", "F405"]

[tool.ty.rules]
unresolved-attribute = "ignore"

[dependency-groups]
dev = ["ruff>=0.14.3", "ty>=0.0.1a24"]
