[project]
name = "bestofblocket"
version = "0.1.0"
description = "Source code for Best of Blocket website."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3==1.42.34",
    "django==6.0.1",
    "django-anymail==14.0",
    "django-ninja>=1.5.1",
    "django-storages==1.14.6",
    "gunicorn==25.0.3",
    "pillow==12.1.0",
    "psycopg==3.3.2",
    "psycopg-binary==3.3.2",
    "psycopg-pool==3.3.0",
    "whitenoise==6.11.0",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "bestofblocket"
module-root = ""

[tool.ruff.lint.per-file-ignores]
"bestofblocket/conf/settings/*" = ["F403", "F405"]

[tool.ty.rules]
unresolved-attribute = "ignore"

[dependency-groups]
dev = [
    "ruff==0.14.14",
    "ty==0.0.15"
]
