[project]
name = "bestofblocket"
version = "0.1.0"
description = "Source code for Best of Blocket website."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3==1.42.96",
    "django==6.0.4",
    "django-anymail==15.0",
    "django-ninja>=1.5.1",
    "django-storages==1.14.6",
    "gunicorn==25.3.0",
    "pillow==12.2.0",
    "psycopg==3.3.4",
    "psycopg-binary==3.3.4",
    "psycopg-pool==3.3.1",
    "whitenoise==6.12.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "bestofblocket"
module-root = ""

[tool.ruff.lint.per-file-ignores]
"bestofblocket/conf/settings/*" = ["F403", "F405"]

[tool.ty.rules]
unresolved-attribute = "ignore"

[dependency-groups]
dev = [
    "ruff==0.15.12",
    "ty==0.0.34"
]
